--- a/WLQt/form/WLDriveWidget.ui
+++ b/WLQt/form/WLDriveWidget.ui
@@ -189,15 +189,11 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="1">
-             <widget class="QComboBox" name="cbActInMEL">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-             </widget>
+            <item row="0" column="0">
+             <widget class="WLEditIOWidget" name="editInALM" native="true"/>
+            </item>
+            <item row="2" column="0">
+             <widget class="WLEditIOWidget" name="editInMEL" native="true"/>
             </item>
             <item row="1" column="1">
              <widget class="QComboBox" name="cbActInPEL">
@@ -209,14 +205,18 @@
               </property>
              </widget>
             </item>
-            <item row="0" column="0">
-             <widget class="WLEditIOPutWidget" name="editInALM" native="true"/>
+            <item row="2" column="1">
+             <widget class="QComboBox" name="cbActInMEL">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+             </widget>
             </item>
             <item row="1" column="0">
-             <widget class="WLEditIOPutWidget" name="editInPEL" native="true"/>
-            </item>
-            <item row="2" column="0">
-             <widget class="WLEditIOPutWidget" name="editInMEL" native="true"/>
+             <widget class="WLEditIOWidget" name="editInPEL" native="true"/>
             </item>
            </layout>
           </item>
@@ -349,7 +349,7 @@
            </widget>
           </item>
           <item row="0" column="0" colspan="2">
-           <widget class="WLEditIOPutWidget" name="editInORG" native="true"/>
+           <widget class="WLEditIOWidget" name="editInORG" native="true"/>
           </item>
          </layout>
         </widget>
@@ -361,10 +361,10 @@
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="1" column="0">
-           <widget class="WLEditIOPutWidget" name="editOutENB" native="true"/>
+           <widget class="WLEditIOWidget" name="editOutENB" native="true"/>
           </item>
           <item row="0" column="0">
-           <widget class="WLEditIOPutWidget" name="editOutRALM" native="true"/>
+           <widget class="WLEditIOWidget" name="editOutRALM" native="true"/>
           </item>
          </layout>
         </widget>
@@ -459,9 +459,9 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>WLEditIOPutWidget</class>
+   <class>WLEditIOWidget</class>
    <extends>QWidget</extends>
-   <header>WLEditIOPutWidget.h</header>
+   <header location="global">WLEditIOWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
