--- a/wlproj/wlmill/wleditmillwidget.ui
+++ b/wlproj/wlmill/wleditmillwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>938</width>
-    <height>371</height>
+    <width>1146</width>
+    <height>455</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -470,7 +470,7 @@
   <customwidget>
    <class>WLEditIOWidget</class>
    <extends>QWidget</extends>
-   <header>wleditiowidget.h</header>
+   <header location="global">wleditiowidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
