--- a/wlproj/wlmill/wlmillcontrol.ui
+++ b/wlproj/wlmill/wlmillcontrol.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>371</width>
-    <height>448</height>
+    <width>395</width>
+    <height>451</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,6 +28,9 @@
   <property name="windowTitle">
    <string>WLMillControl</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <layout class="QGridLayout" name="gridLayout_12">
    <property name="leftMargin">
     <number>5</number>
@@ -47,6 +50,9 @@
      </property>
      <property name="autoFillBackground">
       <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="inputMethodHints">
       <set>Qt::ImhNone</set>
@@ -99,6 +105,9 @@
          <property name="layoutDirection">
           <enum>Qt::LeftToRight</enum>
          </property>
+         <property name="styleSheet">
+          <string notr="true">QTabWidget:pane {background-repeat:no repeat;}</string>
+         </property>
          <property name="inputMethodHints">
           <set>Qt::ImhNone</set>
          </property>
@@ -109,7 +118,7 @@
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>3</number>
          </property>
          <property name="elideMode">
           <enum>Qt::ElideNone</enum>
@@ -1907,6 +1916,9 @@
             <pointsize>16</pointsize>
            </font>
           </property>
+          <property name="styleSheet">
+           <string notr="true"/>
+          </property>
           <property name="text">
            <string>S:20000</string>
           </property>
@@ -2101,7 +2113,7 @@
   </connection>
  </connections>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
   <buttongroup name="buttonGroupWhellX"/>
+  <buttongroup name="buttonGroup"/>
  </buttongroups>
 </ui>
