--- a/wlproj/wlmill/wlpositionwidget.ui
+++ b/wlproj/wlmill/wlpositionwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>295</width>
+    <width>342</width>
     <height>433</height>
    </rect>
   </property>
@@ -24,6 +24,9 @@
   </property>
   <property name="windowTitle">
    <string>WLPositionWidget</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="3">
