--- a/wlqt/form/wldrivewidget.ui
+++ b/wlqt/form/wldrivewidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
+    <width>500</width>
     <height>471</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>0</width>
+    <width>500</width>
     <height>0</height>
    </size>
   </property>
@@ -51,6 +51,15 @@
       <layout class="QGridLayout" name="gridLayout_13">
        <item row="0" column="1">
         <widget class="QScrollArea" name="scrollArea">
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="horizontalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOff</enum>
+         </property>
+         <property name="sizeAdjustPolicy">
+          <enum>QAbstractScrollArea::AdjustToContents</enum>
+         </property>
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
@@ -58,8 +67,8 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-160</y>
-            <width>389</width>
+            <y>-158</y>
+            <width>441</width>
             <height>538</height>
            </rect>
           </property>
@@ -69,13 +78,6 @@
              <property name="rightMargin">
               <number>3</number>
              </property>
-             <item row="5" column="0">
-              <widget class="QPushButton" name="pbVerError">
-               <property name="text">
-                <string>verify error</string>
-               </property>
-              </widget>
-             </item>
              <item row="3" column="1">
               <widget class="QGroupBox" name="groupBoxORG">
                <property name="title">
@@ -471,6 +473,13 @@
               </widget>
              </item>
             </layout>
+           </item>
+           <item row="1" column="0">
+            <widget class="QPushButton" name="pbVerError">
+             <property name="text">
+              <string>verify error</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
