--- a/wlqt/form/wlenternum.ui
+++ b/wlqt/form/wlenternum.ui
@@ -36,10 +36,10 @@
       <number>3</number>
      </property>
      <property name="minimum">
-      <double>-100000.000000000000000</double>
+      <double>-999999999999.000000000000000</double>
      </property>
      <property name="maximum">
-      <double>100000.000000000000000</double>
+      <double>999999999999.000000000000000</double>
      </property>
     </widget>
    </item>
