--- a/wlqt/form/wldevicewidget.ui
+++ b/wlqt/form/wldevicewidget.ui
@@ -6,28 +6,42 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>89</height>
+    <width>382</width>
+    <height>113</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Select Device</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" colspan="2">
-    <widget class="QComboBox" name="cbDevice"/>
-   </item>
-   <item row="2" column="1">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+   <item row="3" column="0">
+    <widget class="QPushButton" name="pbUpdate">
+     <property name="text">
+      <string>update</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="2">
+   <item row="2" column="0" colspan="3">
+    <widget class="QComboBox" name="cbDevice"/>
+   </item>
+   <item row="1" column="0" colspan="2">
     <widget class="QLabel" name="label">
      <property name="text">
       <string notr="true">Please select device:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="labelDriver">
+     <property name="text">
+      <string notr="true">labelDrive</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
