--- a/wlqt/form/wlmessmanager.ui
+++ b/wlqt/form/wlmessmanager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>633</width>
-    <height>43</height>
+    <width>662</width>
+    <height>50</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -38,6 +38,31 @@
        </property>
        <property name="text">
         <string notr="true">icon</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="status">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string notr="true"/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="../../wlproj/wlmill/image.qrc">:/data/icons/iong.png</pixmap>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <property name="indent">
+        <number>1</number>
        </property>
       </widget>
      </item>
@@ -84,6 +109,8 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="../../wlproj/wlmill/image.qrc"/>
+ </resources>
  <connections/>
 </ui>
